# decisionhouse-analysis

./: .gitignore  LICENSE  README.md  benchmark.py  benchmark_caching.py  plot.py  pyproject.toml  run_all_scales.sh
results/: results_cache_experiment_3XL_seed42.json  results_cache_experiment_M_seed42.json  results_cache_experiment_XXL_seed42.json  results_seed42.json
