[project]
name = "gpu-allocation-benchmark"
version = "0.1.0"
description = "Benchmark: same GPU allocation problem, three formulations (MILP, LP, min-cost flow)"
requires-python = ">=3.13"
dependencies = [
    "highspy>=1.12.0",
    "ortools>=9.9.0",
    "numpy>=1.26.0",
    "tabulate>=0.9.0",
    "matplotlib>=3.8.0",
    "duckdb>=0.10.0",
]
